[package]
name = "harperdb_sdk_rust"
version = "0.1.0"
authors = ["dallen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = ["json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
assert-json-diff = "1.1.0"