[package]
name = "harperdb"
version = "1.0.0"
authors = ["dallen"]
edition = "2018"
license = "MIT"
description = "The Rust SDK for HarperDB"
homepage = "https://harperdb.io"
repository = "https://github.com/HarperDB/harperdb-sdk-rust"
documentation = "https://github.com/HarperDB/harperdb-sdk-rust/blob/master/README.md"
readme = "README.md"
keywords = ["harperdb", "database"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = ["json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
assert-json-diff = "1.1.0"
